<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout

        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16sp">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:padding="4dp"
                android:src="@drawable/back" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16sp"
                android:layout_toRightOf="@id/ivBack"
                android:fontFamily="@font/montserrat"
                android:lines="1"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/ic_logo_1_1" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_for_hawkers" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/do_login"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16sp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/mobile"
                    android:textColor="@color/grey" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="6dp"
                    app:cardCornerRadius="12dp"
                    app:strokeColor="@color/colorPrimary"
                    app:strokeWidth="2dp">

                    <EditText
                        android:id="@+id/etPhone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/white"
                        android:gravity="start"
                        android:hint="@string/enter_mobile_no"
                        android:maxLines="1"
                        android:padding="16sp" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16sp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/password"
                    android:textColor="@color/grey" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="6dp"
                    app:cardCornerRadius="12dp"
                    app:strokeColor="@color/colorPrimary"
                    app:strokeWidth="2dp">

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"

                        android:background="@color/white"
                        android:fontFamily="@font/poppins"
                        android:gravity="start"
                        android:hint="@string/type_your_password"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:padding="16sp" />
                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>


        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/poppins_semibold"

            android:gravity="center"
            android:padding="12dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            app:cornerRadius="12dp" />
    </LinearLayout>


</LinearLayout>
